# Starwood

./: CONTRACT_CHANGELOG.md  Cargo.toml  NEEDS_FROM_CORE.md  README.md  Starwood_Build_Blueprint.md  Starwood_Design_Decisions.md  WORKSPACE_DEPS_TODO.md
.github/workflows/: ci.yml  release.yml
assets/data/: classes.ron  enemies.ron  items.ron  races.ron  skills.ron  talents.ron  traits.ron
assets/fonts/: README.md
assets/sprites/: README.md
crates/starwood/: Cargo.toml
crates/starwood/src/: lib.rs  main.rs
crates/starwood_core/: Cargo.toml
crates/starwood_core/src/: lib.rs
crates/starwood_render/: Cargo.toml  README.md
crates/starwood_render/src/: art.rs  debug.rs  effects.rs  icons.rs  lib.rs  paperdoll.rs  rarity.rs
crates/starwood_ui/: Cargo.toml  README.md
crates/starwood_ui/src/: creation.rs  debug.rs  dice.rs  hud.rs  inventory.rs  lib.rs  menu.rs  save.rs  theme.rs
scripts/: setup-mingw-build.ps1
web/: index.html
