[workspace]
members = [
    "crates/starwood",
    "crates/starwood_core",
    "crates/starwood_render",
    "crates/starwood_ui",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = ""

[workspace.dependencies]
bevy = { version = "=0.18.1", default-features = true }
bevy_egui = { version = "=0.39.1" }
bevy_tweening = { version = "=0.15.0" }
bevy_hanabi = { version = "=0.18.0" }
rand = { version = "=0.9.2" }
rand_chacha = { version = "=0.9.0" }
serde = { version = "=1.0.228", features = ["derive"] }
ron = { version = "=0.11.0" }

starwood_core = { path = "crates/starwood_core" }
starwood_render = { path = "crates/starwood_render" }
starwood_ui = { path = "crates/starwood_ui" }
